--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -10,6 +10,10 @@ nav {
   background-color: #fff;
   margin: 0;
 }
+a{
+  text-decoration: none;
+  color:black;
+}
 
 nav p {
   margin-left: 50px;
