--- a/src/components/bills/bills.css
+++ b/src/components/bills/bills.css
@@ -1,14 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
 .resultswrapper{
-    width:250px;
+  
     margin-top: 40px;
-    background-color: #fff;
-    height:500px; 
+    align-items: center;
+    height:500px;  
+    display: flex; 
+    justify-content: space-between;
     margin-left: 150px; 
     border-radius:10px;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+   
 }
-
-.resultswrapper p{
+.innerresult{
+    width:200px;  
+    background-color:#fff;   
+     border-top-left-radius: 10px;
+     border-top-right-radius: 10px;
+     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+}
+.resultswrapper-p {
     background-color: rgb(155, 150, 150);
      border-top-left-radius: 10px;
      border-top-right-radius: 10px;
@@ -32,4 +41,55 @@
     border-bottom: 1px dotted rgb(155, 150, 150);
 }
 
+.billproductwrapper {
+    width:700px;
+    background-color: #fff;
+    height:500px;
+    border-top-left-radius: 10px;
+     border-top-right-radius: 10px;
+     margin-right: 300px;
+}
 
+.billproductwrapperinner{
+    height:420px;
+    overflow:hidden;
+    overflow-y:scroll;
+}
+
+.billproductwrappersubmit {
+    padding:5px; 
+    border:none;
+    background-color:#40d3a7; 
+    border-radius:30px;
+    margin-left: 220px;
+    margin-top: 5px;
+    color : white ;
+    cursor: pointer;
+}
+.billproductwrappersubmit :hover{
+    background-color:#278065
+}
+
+.resultproductname{
+  cursor: pointer;
+}
+.resultproductname:hover {
+ background-color:rgb(245, 245, 245)
+ 
+}
+.product-info {
+    margin:0;
+    padding:5px;
+    font-weight: 900;
+    font-family: 'Roboto Slab', serif;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+   
+} 
+
+.product-info-input {
+    width:50px;
+    height:20px;
+    
+}
