--- a/src/components/searchbar/Searchbar.css
+++ b/src/components/searchbar/Searchbar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  margin-left: 600px;
+  margin:0 auto ;
   margin-top: 50px;
   background-color: white;
   width: 15%;
